--- a/01-UserDefaults.conf
+++ b/01-UserDefaults.conf
@@ -11,9 +11,9 @@ env = EDITOR,vim #default editor
 $edit=${EDITOR:-nano}
 
 # These two are for UserKeybinds.conf & Waybar Modules
-$term = alacritty # Terminal
+$term = kitty # Terminal
 $files = thunar # File Manager
-$browser = firefox
+$browser = cachy-browser
 
 # Default Search Engine for ROFI Search (SUPER S)
 $Search_Engine = "https://www.duckduckgo.com/search?q={}"
