--- a/UserKeybinds.conf
+++ b/UserKeybinds.conf
@@ -8,7 +8,7 @@
 # /* ---- ✴️ Variables ✴️ ---- */  #
 $mainMod = SUPER
 $files = thunar
-$term = alacritty
+$term = kitty
 $browser = cachy-browser
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
