--- a/Startup_Apps.conf
+++ b/Startup_Apps.conf
@@ -30,6 +30,7 @@ exec-once = ags
 exec-once = blueman-applet
 exec-once = waybar
 exec-once = mega-cmd
+exec-once = hyprsunset
 exec-once = discord
 exec-once = steam-native
 exec-once = lutris
