--- a/UserKeybinds.conf
+++ b/UserKeybinds.conf
@@ -65,6 +65,11 @@ bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zs
 bindln = ALT_L , SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 
+# hyprsunset controls
+bind = $mainMod CTRL, N, exec, hyprctl hyprsunset temperature 4000 # sunset on
+bind = $mainMod ALT, N, exec, hyprctl hyprsunset temperature 6500 # sunset off
+bindel = $mainMod CTRL, J, exec, hyprctl hyprsunset temperature -500
+bindel = $mainMod ALT, J, exec, hyprctl hyprsunset temperature +500
 
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
