--- a/UserKeybinds.conf
+++ b/UserKeybinds.conf
@@ -9,7 +9,7 @@
 $mainMod = SUPER
 $files = thunar
 $term = kitty
-$browser = cachy-browser
+$browser = brave
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
@@ -34,7 +34,7 @@ bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # KooL Rofi Menu
 bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # modified Rofi Theme Selector
 
 # Window Manipulation
-bind = $mainMod SHIFT, F, fullscreen # whole full screen
+bind = $mainMod , F, fullscreen # whole full screen
 bind = $mainMod CTRL, F, fullscreen, 1 # fake full screen
 bind = $mainMod , SPACE, togglefloating, #Float Mode
 bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat #All Float Mode
